fix github link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/sidalihallak/"><i
                         class="fab fa-linkedin-in"></i></a>
-                <a class="social-icon" href="https://github.com/bigali"><i class="fab fa-github"></i></a>
+                <a class="social-icon" href="https://github.com/sidalihallak"><i class="fab fa-github"></i></a>
                 <a class="social-icon" href="https://twitter.com/sidalihallak"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
