--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="text-primary">hallak</span>
             </h1>
             <div class="subheading mb-5">
-                7 rue de fourcroy · 44000 Nantes · 0619869730 ·
+                Nantes · 0619869730 ·
                 <a href="mailto:sid.hallak@gmail.com">sid.hallak@gmail.com</a>
             </div>
             <p class="lead mb-5">
